Added customizable coinbase address.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -3,6 +3,7 @@ server.httpPort = 8080
 server.tlsPort = 4443
 server.tlsKeyFile = ssl/server.p12
 server.tlsCertificateFile = ssl/server.crt
+server.coinbaseAddress = qqverdefl9xtryyx8y52m6va5j8s2s4eq59fjdn97e
 
 stratum.bitcoinRpcUrl = localhost
 stratum.bitcoinRpcPort = 8334
